Added notifications (if the user wants them)

--- a/options.html
+++ b/options.html
@@ -30,6 +30,12 @@
     <option value=1>on</option>
   </select><br/><br/>
 
+  <label for="notifications_allowed">Notifications: </label>
+  <select id="notifications_allowed">
+    <option value=0>off</option>
+    <option value=1>on</option>
+  </select><br/><br/>
+
   <label for="theme">Theme: </label>
   <select id="theme">
     <option value="light">Light</option>
