Changed the css to enhance the options page.

--- a/options.html
+++ b/options.html
@@ -15,7 +15,6 @@
     <option value="de">Deutsch</option>
     <option value="es">Español</option>
   </select><br/><br/>
-
   <label for="cc_lang">Subtitle language (cc): </label>
   <select id="cc_lang">
     <option value="en">English</option>
@@ -42,7 +41,7 @@
     <option value="dark">Dark</option>
   </select><br/><br/>
 
-  <button id="saveBtn">Save</button>
+  <button id="saveBtn" class="button">Save</button>
   <div id="status"></div>
 
     <script src="options.js"></script>
