--- a/options.html
+++ b/options.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>YouTube Switch Settings</title>
+  <title>YouTube Swapper Settings</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
