Added an option to download videos using notube.lol via the context menu. Disabled by default for security reasons (I do not own notube.lol; The website is known for using trackers and ads) + Fixed an issue where the youtube player didn't render properly

--- a/options.html
+++ b/options.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -46,7 +47,14 @@
     <option value=1>on</option>
   </select><br/>
   <label class="attention">(Check if Firefox is allowed to send notifications, in order for this to work)</label><br/><br/>
-
+  
+  
+  <label for="download_policy">Download videos with https://notube.lol/: </label>
+  <select id="download_policy">
+    <option value=0>off</option>
+    <option value=1>on</option>
+  </select><br/><br/>
+  <label class="attention">(I do not own notube.lol, use at your own Risk.)</label><br/><br/>
 
   <button id="saveBtn" class="button">Save</button>
   <div id="status"></div>
