--- a/options.html
+++ b/options.html
@@ -56,10 +56,27 @@
   </select><br/><br/>
   <label class="attention">(I do not own notube.lol, use at your own Risk.)</label><br/><br/>
 
-  <button id="saveBtn" class="button">Save</button>
+  <div id="downloadOptions" style="display: none; margin-left: 24px; padding-left: 8px;">
+    <label for="download_format">Default format: </label>
+    <select id="download_format">
+      <option value="mp3">MP3</option>
+      <option value="mp3hd">MP3 HD</option>
+      <option value="mp4">MP4</option>
+      <option value="mp4hd">MP4 HD</option>
+      <option value="mp42k">MP4 2K</option>
+      <option value="m4a">M4A</option>
+      <option value="wav">WAV</option>
+      <option value="3gp">3GP</option>
+      <option value="flv">FLV</option>
+
+    </select>
+    <br/><br/>
+  </div>
+    
+  <button id="saveBtn" class="button">Save</button><br/>
   <div id="status"></div>
 
-    <script src="options.js"></script>
+  <script src="options.js"></script>
 
 </body>
 </html>
