Added notifications to context menu, improved context menu handling with sendMessage to background.js

--- a/options.html
+++ b/options.html
@@ -53,7 +53,7 @@
   <select id="download_policy">
     <option value=0>off</option>
     <option value=1>on</option>
-  </select><br/><br/>
+  </select><br/>
   <label class="attention">(I do not own notube.lol, use at your own Risk.)</label><br/><br/>
 
   <div id="downloadOptions" style="display: none; margin-left: 24px; padding-left: 8px;">
