--- a/options.html
+++ b/options.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>YouTube Swapper Settings</title>
+  <title>YouTube Swapper V1.4</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -47,6 +47,20 @@
     <option value=1>on</option>
   </select><br/>
   <label class="attention">(Check if Firefox is allowed to send notifications, in order for this to work)</label><br/><br/>
+
+  <label for="preserve_timestamp">Preserve timestamp on switch: </label>
+  <select id="preserve_timestamp">
+    <option value=0>off</option>
+    <option value=1>on</option>
+  </select><br/>
+  <label class="attention">(Beta feature, may cause issues)</label><br/><br/>
+
+  <label for="tab_history">Preserve tab history on switch: </label>
+  <select id="tab_history" disabled>
+    <option value=0>off</option>
+    <option value=1>on</option>
+  </select><br/>
+  <label class="attention">(Beta feature, may cause issues - This feature ist intended to keep the youtube-video in your tab history.)</label><br/><br/>
   
   
   <label for="download_policy">Download videos with https://notube.lol/: </label>
@@ -73,7 +87,10 @@
     <br/><br/>
   </div>
     
-  <button id="saveBtn" class="button">Save</button><br/>
+  <input type="checkbox" id="close_settings" checked="on" checked>
+  <label for="close_settings"> Close settings on save?</label><br/><br/>
+
+  <button id="saveBtn" class="button">Save</button><br/><br/>
   <div id="status"></div>
 
   <script src="options.js"></script>
