Adding support for contextmenu click on links opening the nocookies player in a new tab. (Beta feature, not working)

--- a/options.html
+++ b/options.html
@@ -56,7 +56,7 @@
   <label class="attention">(Beta feature, may cause issues)</label><br/><br/>
 
   <label for="tab_history">Preserve tab history on switch: </label>
-  <select id="tab_history" disabled>
+  <select id="tab_history">
     <option value=0>off</option>
     <option value=1>on</option>
   </select><br/>
