Added an option to select where the context-click to open youtube videos should open a video (current or new tab).

--- a/options.html
+++ b/options.html
@@ -53,14 +53,20 @@
     <option value=0>off</option>
     <option value=1>on</option>
   </select><br/>
-  <label class="attention">(Beta feature, may cause issues)</label><br/><br/>
 
   <label for="tab_history">Preserve tab history on switch: </label>
   <select id="tab_history">
     <option value=0>off</option>
     <option value=1>on</option>
   </select><br/>
-  <label class="attention">(Beta feature, may cause issues - This feature ist intended to keep the youtube-video in your tab history.)</label><br/><br/>
+  <label class="attention">(This feature ist intended to keep the youtube-video in your tab history.)</label><br/><br/>
+  
+  <label for="context_right_click">On right-click open video in </label>
+  <select id="context_right_click">
+    <option value=0>new tab</option>
+    <option value=1>current tab</option>
+  </select><br/>
+  <label class="attention">(Beta feature, may cause issues)</label><br/><br/>
   
   
   <label for="download_policy">Download videos with https://notube.lol/: </label>
