Updated Version 2.2 with better options.

--- a/options.html
+++ b/options.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="icons/icon-96.png">
 </head>
 <body>
-  <h1>YouTubeSwitch settings</h1>
+  <h1>YouTube Swapper V2.1 Settings</h1>
 
   <h2>Nocookie-player settings</h2>
 
