--- a/options.html
+++ b/options.html
@@ -3,12 +3,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>YouTube Swapper V1.4</title>
+  <title>YouTubeSwapper V1.4</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="icons/icon-96.png">
 </head>
 <body>
-  <h1>YouTube Swapper V2.1 Settings</h1>
+  <h1>YouTubeSwapper Settings</h1>
 
   <h2>Nocookie-player settings</h2>
 
