--- a/options.html
+++ b/options.html
@@ -3,14 +3,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>YouTubeSwapper V1.4</title>
+  <title>YouTubeSwapper V2.3</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="icons/icon-96.png">
 </head>
 <body>
   <h1>YouTubeSwapper Settings</h1>
 
-  <h2>Nocookie-player settings</h2>
+  <h2>Nocookie-player</h2>
 
   <label for="hl">Interface language (hl): </label>
   <select id="hl">
@@ -41,7 +41,7 @@
     <option value="dark">Dark</option>
   </select><br/><br/>
 
-  <h2>Extension settings</h2>
+  <h2>Extension</h2>
   <label for="notifications_allowed">Notifications: </label>
   <select id="notifications_allowed">
     <option value=0>off</option>
