Updated the settings for better API_KEY handling and uniformity.

--- a/options.html
+++ b/options.html
@@ -88,9 +88,9 @@
   </div>
 
 
-  <label>YouTube API Key: </label>
+ <label>YouTube API Key: </label>
   <span id="apiKeyContainer">
-    <label id="apiKey" class="api-key"></label>
+    <input id="apiKeyInput" type="password" placeholder="(not set)" class="api-key-input" autocomplete="off" />
     <button id="toggleApiKeyBtn" type="button">Show</button>
   </span>
   <br/><br/>
