Fixed bugs occuring on PrivaTube, added a contextclick to always have access to PrivaTube.

--- a/PrivaTube/PrivaTube.html
+++ b/PrivaTube/PrivaTube.html
@@ -43,13 +43,14 @@
 
     <script src="PrivaTube.js"></script>
     <div id="api-key-modal" style="display:none;">
-      <div class="api-key-modal-backdrop"></div>
-      <div class="api-key-modal-content">
+    <div class="api-key-modal-backdrop"></div>
+    <div class="api-key-modal-content">
         <h2>Enter your YouTube API Key</h2>
+        <div id="api-key-error" style="color:crimson; margin-bottom:10px; display:none;"></div>
         <input type="text" id="api-key-input" placeholder="Paste your API key here">
         <button id="api-key-save-btn">Save</button>
         <p class="attention" style="margin-top:8px;">Your key is stored only in your browser.</p>
-      </div>
+    </div>
     </div>
 
 </body>
