--- a/PrivaTube/PrivaTube.html
+++ b/PrivaTube/PrivaTube.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SearchTube Beta</title>
+    <title>PrivaTube/title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="icons/icon-96.png">
 </head>
 <body>
     <header class="main-header" onclick="showHomepage()" style="cursor:pointer;">
-        <h1>SearchTube</h1>
+        <h1>PrivaTube</h1>
         <h5>by YoutubeSwapper</h5>
     </header>
 
