--- a/PrivaTube/PrivaTube.html
+++ b/PrivaTube/PrivaTube.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PrivaTube/title>
+    <title>PrivaTube</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="icons/icon-96.png">
 </head>
