Add "Load More" button for comments and improve UI responsiveness

--- a/PrivaTube/video.html
+++ b/PrivaTube/video.html
@@ -63,6 +63,10 @@
         <p id="video-description" class="video-description"></p>
     </div>
     <div id="comment-wrapper" class="comment-wrapper"></div>
+    <div id="load-more-wrapper">
+        <button id="load-more-btn" style="display:none;">Load More</button>
+    </div>
+
 
     <script src="web/VideoPlayer.js"></script>
 
