Refactor video and comment display logic, enhance UI responsiveness, and improve comment sorting functionality. Update styles for better visual consistency and add new icons for views and sorting.

--- a/PrivaTube/video.html
+++ b/PrivaTube/video.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
@@ -43,30 +42,47 @@
         <div id="video-info">
             <h2 id="video-title" class="video-title"></h2>
             <div id="video-channel" class="video-channel">
-                <a id="channel-link" href="#" target="_self">
-                    <img id="channel-avatar" class="channel-avatar" src="" alt="Channel Avatar">
-                <div class="channel-info">
-                    <span id="channel-name" class="channel-name"></span>
-                    <span id="channel-subscribers" class="channel-subscribers"></span>
-                </div>
-                </a>
-                <button id="share-btn" title="Share this video" style="margin-left:16px; background:transparent; border:none; cursor:pointer;">
-                    <img src="web/icons/share-96.svg" alt="Share" style="width:28px;height:28px">
+            <a id="channel-link" href="#" target="_self">
+                <img id="channel-avatar" class="channel-avatar" src="" alt="Channel Avatar">
+            <div class="channel-info">
+                <span id="channel-name" class="channel-name"></span>
+                <span id="channel-subscribers" class="channel-subscribers"></span>
+            </div>
+            </a>
+            <div class="channel-actions">
+                <span id="channel-likes" class="channel-likes"></span>
+                <button id="share-btn" title="Share this video" class="channel-action-btn">
+                <img src="web/icons/share-96.svg" alt="Share" style="width:28px;height:28px">
                 </button>
+            </div>
             </div>
     </div>
     <div id="video-stats">
-        <div class="stats-row"> 
-            <span id="view-count" class="view-count"></span>
-            <span id="like-count" class="like-count"></span>
+        <div class="stats-row">
+            <span id="view-count" class="video-stat"></span>
+            <span id="video-published-date" class="video-stat"></span>
         </div>
         <p id="video-description" class="video-description"></p>
+    </div>
+    <div id="comment-action-wrapper">
+    <span id="comment-count" class="comment-count"></span>
+    <div class="comment-sort-wrapper">
+        <button id="comment-sort-btn">
+        <img src="web/icons/sort-96.svg" alt="Sort Comments" style="width:24px;height:24px;vertical-align:middle;">
+        <span id="comment-sort-label">Sort by</span>
+        </button>
+        <div class="comment-list" id="comment-list">
+        <div data-code="popular">Top comments</div>
+        <div data-code="recent">Newest first</div>
+        </div>
+    </div>
+    </div>
+            
     </div>
     <div id="comment-wrapper" class="comment-wrapper"></div>
     <div id="load-more-wrapper">
         <button id="load-more-btn" style="display:none;">Load More</button>
     </div>
-
 
     <script src="web/VideoPlayer.js"></script>
 
